--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dashroad-frontend-app",
+  "name": "Bloodbank-frontend-app",
   "version": "0.1.0",
   "private": true,
   "engines": {
